# TaskManager

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle.kts  generate_prebuilt_db.py  gradle.properties  privacy_policy.md  settings.gradle.kts  uad_lists.json
.github/workflows/: android.yml
Bridge/: build.gradle.kts
Commons/: build.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/databases/: apps.db
app/src/main/java/com/rk/: Daemon.kt  LoadingPopup.kt
app/src/main/res/drawable/: coffee.xml  ic_android_black_24dp.xml  ic_launcher.xml  ic_taskmanager_foreground.xml  upi_pay.xml
app/src/main/res/mipmap-anydpi-v26/: ic_taskmanager.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-zh/: strings.xml
baselineprofile/: build.gradle.kts
components/: build.gradle.kts
fastlane/metadata/android/en-US/: full_description.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
main/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
main/src/main/: AndroidManifest.xml
main/src/main/res/drawable/: cpu_24px.xml  ic_taskmanager_monochrome.xml
main/src/main/res/values/: strings.xml
main/src/main/res/values-pt-rBR/: strings.xml
main/src/main/res/values-ru/: strings.xml
main/src/main/res/values-tr/: strings.xml
main/src/main/res/values-zh/: strings.xml
taskmanagerd/: build.gradle.kts
taskmanagerd/src/main/cpp/: CMakeLists.txt  taskmanagerd.cpp
(+134 files in other folders)
